--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ authors = [
     { name = "bastienlc", email = "78959054+bastienlc@users.noreply.github.com" },
 ]
 requires-python = ">=3.11"
-dependencies = ["pyyaml>=6.0", "pydantic>=2.0", "marshmallow>=3.0"]
+dependencies = [
+    "pyyaml>=6.0",
+    "pydantic>=2.0",
+    "marshmallow>=3.0",
+    "jinja2>=3.0",
+    "cryptography>=41.0",
+]
 
 [project.scripts]
 pyenvgen = "pyenvgen.cli:main"
@@ -17,4 +23,7 @@ requires = ["uv_build>=0.9.20,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["pytest>=9.0.2"]
+dev = [
+    "pytest>=9.0.2",
+    "ruff>=0.15.2",
+]
