--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ requires = ["uv_build>=0.9.20,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = [
-    "pytest>=9.0.2",
-    "ruff>=0.15.2",
-]
+dev = ["pytest>=9.0.2", "pytest-cov>=6.0", "ruff>=0.15.2", "pre-commit>=4.0"]
+
+[tool.coverage.run]
+source = ["src/pyenvgen"]
+
+[tool.coverage.report]
+fail_under = 80
