--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "marshmallow>=3.0",
     "jinja2>=3.0",
     "cryptography>=41.0",
+    "tomli-w>=1.0",
 ]
 
 [project.scripts]
